<resources>
    <string name="app_name">Reach</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create">Create</string>
    <string name="event_name">Event Name</string>
    <string name="location">Location</string>
    <string name="range">Range(Km)</string>
    <string name="event_type">Event Type</string>
    <string name="capacity">Capacity</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="event_description">Event Description</string>
<!--    <string name="title_activity_maps">Map</string>-->
</resources>
